--- a/pom.xml
+++ b/pom.xml
@@ -24,16 +24,16 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.1.8.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>javax.el-api</artifactId>
-            <version>3.0.1-b04</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>javax.el</artifactId>
-            <version>2.2.6</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.el</groupId>-->
+            <!--<artifactId>javax.el-api</artifactId>-->
+            <!--<version>3.0.1-b04</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.glassfish.web</groupId>-->
+            <!--<artifactId>javax.el</artifactId>-->
+            <!--<version>2.2.6</version>-->
+        <!--</dependency>-->
         <!--spring-data-jpa 需要引入的jar,end-->
         <!--spring 相关jar,start-->
         <dependency>
