--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" metadata-complete="true" >
+ "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
 
   <!--springmvc提供的字符转换器 处理乱码-->
   <filter>
@@ -56,8 +57,8 @@
     -->
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
+
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>/WEB-INF/jsp/error.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
